--- a/index.html
+++ b/index.html
@@ -3,86 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet"href="styles.css">   
     <title>FootballZone - Web Shop</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-        }
-
-        header {
-            background-color: #004d00;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-
-        nav {
-            background-color: #009900;
-            padding: 10px;
-            text-align: center;
-        }
-
-        nav a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        main {
-            background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTHfKjJ1r3UX--SnuTzzn0936Jo-pCHFnK2bA&s');
-            background-size: cover;
-            background-position: center;
-            height: 500px;
-            color: white;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-shadow: 2px 2px 5px #000;
-        }
-
-        main h2 {
-            font-size: 2.5em;
-            margin: 0;
-        }
-
-        main p {
-            font-size: 1.3em;
-            max-width: 80%;
-            text-align: center;
-        }
-
-        footer {
-            background-color: #004d00;
-            color: white;
-            text-align: center;
-            padding: 10px;
-        }
-    </style>
 </head>
+
 <body>
 
     <header>
+         <img src="favicon.png" alt="Ikona" class="logo">
         <h1>FootballZone Web Shop</h1>
     </header>
 
     <nav>
-        <a href="#">Početna</a>
-        <a href="#">O trgovini</a>
+        <a href="index.html">Početna</a>
+        <a href="Aboutme.html">O shopu</a>
         <a href="#">Kontakt</a>
     </nav>
 
     <main>
         <h2>Dobrodošli u FootballZone!</h2>
-        <p>Oprema za nogomet svih razina – dresovi, kopačke, lopte i još mnogo toga!</p>
-    </main>
+        <p>
+            FootballZone je vaš online web shop specijaliziran za nogometnu opremu i obuću.
+            Nudimo kvalitetne nogometne kopačke, tenisice i sportsku opremu za rekreativce
+            i profesionalce. Naš cilj je omogućiti vam najbolji izbor proizvoda po
+            pristupačnim cijenama, uz jednostavnu i sigurnu online kupnju.
+        </p>
 
-    <footer>
-        <p>Gabriel Beljak &copy; 2025</p>
-    </footer>
+        <div class="image-section">
+            <img src="https://www.euronogomet.com/images/vijesti5/nogometnaoprema523.png" alt="FootballZone proizvod">
+            <img src="https://footballmania.hr/pub/media/catalog/category/Lopta.jpg" alt="FootballZone proizvod">
+        </div>
+    </main>
+<footer>
+    <div class="footer-icons">
+        <a href="https://www.google.com/maps" title="Lokacija" style="color:white; text-decoration:none;">📍</a>
+        <a href="mailto:footballzone@gmail.com" title="Email" style="color:white; text-decoration:none;">📧</a>
+        <a href="tel:+385991234567" title="Kontakt" style="color:white; text-decoration:none;">📞</a>
+    </div>
+
+    <p>Gabriel Beljak &copy; 2025</p>
+</footer>
 
 </body>
 </html>
