--- a/Aboutme.html
+++ b/Aboutme.html
@@ -10,14 +10,14 @@
 <body>
 
     <header>
-        <img src="football-player-sport-football-icon.jpg" alt="Ikona" class="logo">
+        <img src="images.png" alt="Ikona" class="logo">
         <h1>O nama</h1>
     </header>
 
     <nav>
         <a href="index.html">Početna</a>
         <a href="Aboutme.html">O nama</a>
-        <a href="#Product.html">Proizvodi</a>
+        <a href="#Dresovi.html">Dresovi</a>
     </nav>
 
     <main>
@@ -33,7 +33,7 @@
             </p>
         </section>
 
-        <!-- Misija i vrijednosti -->
+        
         <section class="mission-section">
             <h2>Naša misija</h2>
             <p>
@@ -61,7 +61,7 @@
             </p>
             <p>
                 Za pregled cijelog asortimana i kupovinu, kliknite ovdje:  
-                <a href="Product.html" class="btn-products">Pogledajte proizvode</a>
+                <a href="index.html" class="btn-products">Pogledajte proizvode</a>
             </p>
         </section>
 
