--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 
     <!-- Header / Hero -->
     <header class="hero">
-        <img src="favicon.png" alt="Ikona" class="logo">
+        <img src="football-player-sport-football-icon.jpg" alt="Ikona" class="logo">
         <h1>FootballZone</h1>
-        <p class="hero-subtitle">Sve za nogomet – dresovi, kopačke i lopte!</p>
-        <a href="Dresovi.html" class="cta-btn">Pogledaj dresove</a>
     </header>
 
     <!-- Navigacija -->
@@ -23,6 +21,7 @@
         <a href="index.html">Početna</a>
         <a href="Aboutme.html">O nama</a>
         <a href="Dresovi.html">Dresovi</a>
+        <a href="Kopacke.html">Kopačke</a>
     </nav>
 
     <!-- Main Content -->
