--- a/Aboutme.html
+++ b/Aboutme.html
@@ -17,7 +17,8 @@
     <nav>
         <a href="index.html">Početna</a>
         <a href="Aboutme.html">O nama</a>
-        <a href="#Dresovi.html">Dresovi</a>
+        <a href="Dresovi.html">Dresovi</a>
+        <a href="Kopacke.html">Kopačke</a>
     </nav>
 
     <main>
