--- a/Dresovi.html
+++ b/Dresovi.html
@@ -12,12 +12,13 @@
 
 <header>
     <img src="dresovi.png" alt="Ikona" class="logo">
-    <h1>FootballZone Web Shop</h1>
+    <h1>Dresovi - FootballZone</h1>
 </header>
 <nav>
     <a href="index.html">Početna</a>
-    <a href="Aboutme.html">O shopu</a>
+    <a href="Aboutme.html">O nama</a>
     <a href="Dresovi.html">Dresovi</a>
+    <a href="Lopte.html">Lopte</a>
     <a href="Kopacke.html">Kopačke</a>
 </nav>
 
