--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
 
 <body>
 
-    <!-- Header / Hero -->
+    
     <header class="hero">
         <img src="football-player-sport-football-icon.jpg" alt="Ikona" class="logo">
         <h1>FootballZone</h1>
     </header>
 
-    <!-- Navigacija -->
+  
     <nav>
         <a href="index.html">Početna</a>
         <a href="Aboutme.html">O nama</a>
         <a href="Dresovi.html">Dresovi</a>
+        <a href="Lopte.html">Lopte</a>
         <a href="Kopacke.html">Kopačke</a>
     </nav>
 
-    <!-- Main Content -->
+   
     <main>
         <section class="welcome">
             <h2>Dobrodošli u FootballZone!</h2>
@@ -33,6 +34,7 @@
                 Nudimo kvalitetne nogometne kopačke, tenisice i sportsku opremu za rekreativce
                 i profesionalce. Naš cilj je omogućiti vam najbolji izbor proizvoda po
                 pristupačnim cijenama, uz jednostavnu i sigurnu online kupnju.
+                Više informacija možete saznati na stranici O nama.
             </p>
         </section>
 
@@ -47,12 +49,12 @@
                 <div class="category-card">
                     <img src="https://footballmania.hr/pub/media/catalog/category/Lopta.jpg" alt="Lopte">
                     <h3>Lopte</h3>
-                    <a href="Proizvodi.html#lopte" class="card-btn">Pogledaj</a>
+                    <a href="Lopte.html" class="card-btn">Pogledaj</a>
                 </div>
                 <div class="category-card">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQDMPbR4FSFaHUQ2lXGY2m4oF746Hdu4kJBHg&s" alt="Kopačke">
                     <h3>Kopačke</h3>
-                    <a href="Proizvodi.html#kopacke" class="card-btn">Pogledaj</a>
+                    <a href="Kopacke.html" class="card-btn">Pogledaj</a>
                 </div>
             </div>
         </section>
