--- a/Aboutme.html
+++ b/Aboutme.html
@@ -3,78 +3,130 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"href="styles.css">   
-    <title>FootballZone - Web Shop</title>
+    <link rel="stylesheet" href="styles.css">   
+    <title>FootballZone - O nama</title>
+    <style>
+        main {
+            max-width: 1000px;
+            margin: 40px auto;
+            padding: 0 20px;
+            color: #333;
+        }
+
+        h2 {
+            color: #004d00;
+            margin-top: 40px;
+            margin-bottom: 20px;
+        }
+
+        p {
+            line-height: 1.7;
+            margin-bottom: 15px;
+        }
+
+        ul {
+            margin-left: 20px;
+            margin-bottom: 20px;
+        }
+
+        ul li {
+            margin-bottom: 10px;
+        }
+
+        .about-section, .mission-section {
+            background-color: #f4f4f4;
+            padding: 25px 20px;
+            border-radius: 15px;
+            margin-bottom: 30px;
+        }
+
+        .btn-products {
+            display: inline-block;
+            background: linear-gradient(135deg, #007bff, #0056b3);
+            color: white;
+            padding: 12px 25px;
+            border-radius: 30px;
+            text-decoration: none;
+            font-weight: bold;
+            transition: all 0.3s ease;
+        }
+
+        .btn-products:hover {
+            transform: scale(1.05);
+            box-shadow: 0 8px 20px rgba(0,123,255,0.5);
+        }
+    </style>
 </head>
 
 <body>
 
-    <header>
-        <img src="images.png" alt="Ikona" class="logo">
-        <h1>O nama</h1>
-    </header>
+<header>
+    <img src="images.png" alt="Ikona" class="logo">
+    <h1>O nama</h1>
+</header>
 
-    <nav>
-        <a href="index.html">Početna</a>
-        <a href="Aboutme.html">O nama</a>
-        <a href="Dresovi.html">Dresovi</a>
-        <a href="Kopacke.html">Kopačke</a>
-    </nav>
+<nav>
+    <a href="index.html">Početna</a>
+    <a href="Aboutme.html">O nama</a>
+    <a href="Dresovi.html">Dresovi</a>
+    <a href="Lopte.html">Lopte</a>
+    <a href="Kopacke.html">Kopačke</a>
+</nav>
 
-    <main>
-        <h2>O web shopu-FootballZone</h2>
-          <section class="about-section">
-            <p>
-                Dobrodošli u <strong>FootballZone</strong> – više od običnog webshopa! Naš cilj je svakom nogometnom 
-                zaljubljeniku ponuditi najbolju moguću opremu i vrhunsko iskustvo kupovine.
-            </p>
-            <p>
-                FootballZone spaja <strong>strast prema nogometu</strong>, <strong>kvalitetne proizvode</strong> i 
-                <strong>jednostavnu navigaciju</strong>, sve na jednom mjestu.
-            </p>
-        </section>
+<main>
 
-        
-        <section class="mission-section">
-            <h2>Naša misija</h2>
-            <p>
-                Naša misija je podržati sportaše svih razina – od početnika do profesionalaca. 
-                Svaki proizvod koji nudimo pažljivo biramo kako bi zadovoljio najviše standarde kvalitete i trajnosti.
-            </p>
-            <ul>
-                <li><strong>Iskustvo i znanje:</strong> Tim prati najnovije trendove i preporučuje samo provjerene proizvode.</li>
-                <li><strong>Pouzdana kupovina:</strong> Sigurna plaćanja i brza dostava do vaših vrata.</li>
-                <li><strong>Podrška za sportaše:</strong> Savjeti za odabir kopački, dresova i lopti za najbolju izvedbu.</li>
-                <li><strong>Strast prema nogometu:</strong> Svi članovi tima su nogometni entuzijasti, što se vidi u svakom detalju našeg webshopa.</li>
-            </ul>
-             <h2>Naša Priča</h2>
-            <p>
-                FootballZone je osnovan 2025. godine s jasnim ciljem – donijeti vrhunsku nogometnu opremu i sportske proizvode
-                svakom ljubitelju nogometa u Hrvatskoj. Od prvih dana, fokusirali smo se na kombinaciju kvalitete, pouzdanosti
-                i jednostavnosti online kupovine.  
-            </p>
-            <p>
-                Ponosni smo na našu strast i posvećenost sportu, te stalno radimo na tome da naši kupci dobiju **najbolju
-                opremu po povoljnim cijenama**. Uz standardne proizvode, nudimo i dodatnu sportsku opremu za trening i rekreaciju.
-            </p>
-            <p>
-                <strong>Nudimo:</strong> dresove, kopačke, štucne, lopte, golmanske rukavice, torbe, štitnike, trenirke, sportske čarape i opremu za rekreaciju.
-            </p>
-            <p>
-                Za pregled cijelog asortimana i kupovinu, kliknite ovdje:  
-                <a href="index.html" class="btn-products">Pogledajte proizvode</a>
-            </p>
-        </section>
+    <section class="about-section">
+        <h2>O web shopu FootballZone</h2>
+        <p>
+            Dobrodošli u <strong>FootballZone</strong> – više od običnog webshopa! Naš cilj je svakom nogometnom 
+            zaljubljeniku ponuditi najbolju moguću opremu i vrhunsko iskustvo kupovine.
+        </p>
+        <p>
+            FootballZone spaja <strong>strast prema nogometu</strong>, <strong>kvalitetne proizvode</strong> i 
+            <strong>jednostavnu navigaciju</strong>, sve na jednom mjestu.
+        </p>
+    </section>
 
-        </section>
-    </main>
+    <section class="mission-section">
+        <h2>Naša misija</h2>
+        <p>
+            Naša misija je podržati sportaše svih razina – od početnika do profesionalaca. 
+            Svaki proizvod koji nudimo pažljivo biramo kako bi zadovoljio najviše standarde kvalitete i trajnosti.
+        </p>
+        <ul>
+            <li><strong>Iskustvo i znanje:</strong> Tim prati najnovije trendove i preporučuje samo provjerene proizvode.</li>
+            <li><strong>Pouzdana kupovina:</strong> Sigurna plaćanja i brza dostava do vaših vrata.</li>
+            <li><strong>Podrška za sportaše:</strong> Savjeti za odabir kopački, dresova i lopti za najbolju izvedbu.</li>
+            <li><strong>Strast prema nogometu:</strong> Svi članovi tima su nogometni entuzijasti, što se vidi u svakom detalju našeg webshopa.</li>
+        </ul>
+
+        <h2>Naša priča</h2>
+        <p>
+            FootballZone je osnovan 2025. godine s jasnim ciljem – donijeti vrhunsku nogometnu opremu i sportske proizvode
+            svakom ljubitelju nogometa u Hrvatskoj. Od prvih dana fokusirali smo se na kombinaciju kvalitete, pouzdanosti
+            i jednostavnosti online kupovine.  
+        </p>
+        <p>
+            Ponosni smo na našu strast i posvećenost sportu, te stalno radimo na tome da naši kupci dobiju 
+            <strong>najbolju opremu po povoljnim cijenama</strong>. Uz standardne proizvode, nudimo i dodatnu sportsku opremu za trening i rekreaciju.
+        </p>
+        <p>
+            <strong>Nudimo:</strong> dresove, kopačke, štucne, lopte, golmanske rukavice, torbe, štitnike, trenirke, sportske čarape i opremu za rekreaciju.
+        </p>
+        <p>
+            Za pregled cijelog asortimana i kupovinu, kliknite ovdje:  
+            <a href="index.html" class="btn-products">Pogledajte proizvode</a>
+        </p>
+    </section>
+
+</main>
+
 <footer>
     <div class="footer-icons">
         <a href="https://www.google.com/maps" title="Lokacija" style="color:white; text-decoration:none;">📍</a>
         <a href="mailto:footballzone@gmail.com" title="Email" style="color:white; text-decoration:none;">📧</a>
         <a href="tel:+385991234567" title="Kontakt" style="color:white; text-decoration:none;">📞</a>
     </div>
-
     <p>Gabriel Beljak &copy; 2025</p>
 </footer>
 
