--- a/Lopte.html
+++ b/Lopte.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="styles.css">
 <title>FootballZone - Lopte</title>
+<link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
 
@@ -19,6 +20,7 @@
     <a href="Dresovi.html">Dresovi</a>
     <a href="Lopte.html">Lopte</a>
     <a href="Kopacke.html">Kopačke</a>
+    <a href="ostala_oprema.html">Ostala oprema</a>
 </nav>
 
 <main class="products-lopte">
