--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     
     <link rel="stylesheet" href="styles.css">   
     <title>FootballZone - Web Shop</title>
+    <link rel="icon" type="image/x-icon" href="football-player-sport-football-icon.jpg">
 </head>
 
 <body>
@@ -23,6 +24,7 @@
         <a href="Dresovi.html">Dresovi</a>
         <a href="Lopte.html">Lopte</a>
         <a href="Kopacke.html">Kopačke</a>
+        <a href="ostala_oprema.html">Ostala oprema</a>
     </nav>
 
    
@@ -37,27 +39,18 @@
                 Više informacija možete saznati na stranici O nama.
             </p>
         </section>
+    <section class="featured-dres">
+    <h2>Najveći popust</h2>
+    <a href="Dresovi.html#real-madrid-dres" class="dres-link">
+        <img src="https://www.rost-sport.hr/EasyEdit/UserFiles/CatalogImages/muski-dres-adidas-real-madrid-2425-home-white/dres-adidas-iu5011-veluni-iu5011-638626957419350550_670_670.jpeg" 
+             alt="Dres Real Madrida" class="featured-dres-img">
+        <div class="dres-text">Dres Real Madrida -20%</div>
+    </a>
+</section>
 
-        <section class="featured">
-            <h2>Istaknuti proizvodi</h2>
-            <div class="featured-grid">
-                <div class="category-card">
-                    <img src="https://prosportbh.ba/Media/Slike/Artikli/174-1-givova-dresovi-nogomet-v.jpg" alt="Dresovi">
-                    <h3>Dresovi</h3>
-                    <a href="Dresovi.html" class="card-btn">Pogledaj</a>
-                </div>
-                <div class="category-card">
-                    <img src="https://footballmania.hr/pub/media/catalog/category/Lopta.jpg" alt="Lopte">
-                    <h3>Lopte</h3>
-                    <a href="Lopte.html" class="card-btn">Pogledaj</a>
-                </div>
-                <div class="category-card">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQDMPbR4FSFaHUQ2lXGY2m4oF746Hdu4kJBHg&s" alt="Kopačke">
-                    <h3>Kopačke</h3>
-                    <a href="Kopacke.html" class="card-btn">Pogledaj</a>
-                </div>
-            </div>
-        </section>
+
+
+      
     </main>
 
     <footer>
