--- a/Aboutme.html
+++ b/Aboutme.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">   
     <title>FootballZone - O nama</title>
+    <link rel="icon" type="image/x-icon" href="images.png">
     <style>
         main {
             max-width: 1000px;
@@ -71,6 +72,7 @@
     <a href="Dresovi.html">Dresovi</a>
     <a href="Lopte.html">Lopte</a>
     <a href="Kopacke.html">Kopačke</a>
+    <a href="ostala_oprema.html">Ostala oprema</a>
 </nav>
 
 <main>
@@ -94,10 +96,10 @@
             Svaki proizvod koji nudimo pažljivo biramo kako bi zadovoljio najviše standarde kvalitete i trajnosti.
         </p>
         <ul>
-            <li><strong>Iskustvo i znanje:</strong> Tim prati najnovije trendove i preporučuje samo provjerene proizvode.</li>
-            <li><strong>Pouzdana kupovina:</strong> Sigurna plaćanja i brza dostava do vaših vrata.</li>
-            <li><strong>Podrška za sportaše:</strong> Savjeti za odabir kopački, dresova i lopti za najbolju izvedbu.</li>
-            <li><strong>Strast prema nogometu:</strong> Svi članovi tima su nogometni entuzijasti, što se vidi u svakom detalju našeg webshopa.</li>
+            <strong>Iskustvo i znanje:</strong> Tim prati najnovije trendove i preporučuje samo provjerene proizvode.<br>
+            <strong>Pouzdana kupovina:</strong> Sigurna plaćanja i brza dostava do vaših vrata.<br>
+            <strong>Podrška za sportaše:</strong> Savjeti za odabir kopački, dresova i lopti za najbolju izvedbu.<br>
+            <strong>Strast prema nogometu:</strong> Svi članovi tima su nogometni entuzijasti, što se vidi u svakom detalju našeg webshopa.<br>
         </ul>
 
         <h2>Naša priča</h2>
@@ -112,10 +114,6 @@
         </p>
         <p>
             <strong>Nudimo:</strong> dresove, kopačke, štucne, lopte, golmanske rukavice, torbe, štitnike, trenirke, sportske čarape i opremu za rekreaciju.
-        </p>
-        <p>
-            Za pregled cijelog asortimana i kupovinu, kliknite ovdje:  
-            <a href="index.html" class="btn-products">Pogledajte proizvode</a>
         </p>
     </section>
 
