--- a/Dresovi.html
+++ b/Dresovi.html
@@ -6,6 +6,7 @@
     
     <link rel="stylesheet" href="styles.css">   
     <title>FootballZone - Web Shop</title>
+    <link rel="icon" type="image/x-icon" href="dresovi.png">
 </head>
 
 <body>
@@ -20,23 +21,24 @@
     <a href="Dresovi.html">Dresovi</a>
     <a href="Lopte.html">Lopte</a>
     <a href="Kopacke.html">Kopačke</a>
+    <a href="ostala_oprema.html">Ostala oprema</a>
 </nav>
 
 <main class="products">
 
-    <div class="product">
-        <span class="discount">-20%</span>
-        <img src="https://www.rost-sport.hr/EasyEdit/UserFiles/CatalogImages/muski-dres-adidas-real-madrid-2425-home-white/dres-adidas-iu5011-veluni-iu5011-638626957419350550_670_670.jpeg" alt="Dres Real Madrida">
-        <h2>Dres Real Madrida</h2>
-        <p class="price">
-            <span class="old-price">150 €</span>
-            <span class="new-price">120 €</span>
-        </p>
-        <button class="details-btn" onclick="toggleDetails(this)">Detalji</button>
-        <div class="details">
-            <p>Najnoviji dres Real Madrida za sezonu 2025/26 zadržava klasičnu bijelu boju koja simbolizira identitet „Los Blancosa“, ali s modernim dizajnerskim detaljima i inovativnim Adidas tehnologijama za veću udobnost i prozračnost. Dres slavi povijest kluba i povratak njegovog DNK, a kombinacija tradicionalnih i suvremenih elemenata čini ovaj model idealnim za navijače koji cijene stil i performanse.</p>
-        </div>
+    <div class="product" id="real-madrid-dres">
+    <span class="discount">-33%</span>
+    <img src="https://www.rost-sport.hr/EasyEdit/UserFiles/CatalogImages/muski-dres-adidas-real-madrid-2425-home-white/dres-adidas-iu5011-veluni-iu5011-638626957419350550_670_670.jpeg" alt="Dres Real Madrida">
+    <h2>Dres Real Madrida</h2>
+    <p class="price">
+        <span class="old-price">150 €</span>
+        <span class="new-price">99,99 €</span>
+    </p>
+    <button class="details-btn" onclick="toggleDetails(this)">Detalji</button>
+    <div class="details">
+        <p>Najnoviji dres Real Madrida za sezonu 2025/26 zadržava klasičnu bijelu boju...</p>
     </div>
+</div>
 
     <div class="product">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQVZRjxuSNQzGhLA0lLqXmbDyz3-RcuOqawEQ&s" alt="Dres Barcelone">
@@ -140,6 +142,16 @@
         details.style.display = details.style.display === "block" ? "none" : "block";
     }
     </script>
-    
+<script>
+window.addEventListener('DOMContentLoaded', () => {
+    const hash = window.location.hash;
+    if(hash === "#real-madrid-dres") {
+        const product = document.querySelector(hash);
+        const details = product.querySelector('.details');
+        details.style.display = 'block';
+        product.scrollIntoView({ behavior: 'smooth', block: 'start' });
+    }
+});
+</script>
 </body>
 </html>
