gotovo sve osim ostale opreme

--- a/Dresovi.html
+++ b/Dresovi.html
@@ -36,7 +36,7 @@
     </p>
     <button class="details-btn" onclick="toggleDetails(this)">Detalji</button>
     <div class="details">
-        <p>Najnoviji dres Real Madrida za sezonu 2025/26 zadržava klasičnu bijelu boju...</p>
+        <p>Pridruži se kraljevskom klubu s najnovijim dresom Real Madrida za sezonu 2025/26! Klasična bijela boja dobila je suptilne moderne detalje koji odražavaju tradiciju i prestiž kluba. Napredni materijali pružaju izvanrednu prozračnost i udobnost, dok tehnologija odvodi vlagu i omogućuje potpunu slobodu kretanja na terenu. Savršen je izbor za prave navijače koji žele kombinaciju stila, elegancije i vrhunskih performansi.</p>
     </div>
 </div>
 
@@ -122,6 +122,28 @@
                 <p>Novi domaći dres Manchester Citya 2025/26 u prepoznatljivoj sky blue boji. Nike tehnologija pruža prozračnost i lagan osjećaj za maksimalnu udobnost na terenu.</p>
             </div>
         </div>
+        <div class="product">
+            <span class="discount">-20%</span>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJUNxFfygl-7PGGHYjogxBYFXRAQgP8DeB7A&s" alt="Dres Bayern Munchen">
+            <h2>Dres Bayern Munchen</h2>
+            <p class="price">
+                <span class="old-price">150 €</span>
+                <span class="new-price">120 €</span>
+            </p>
+            <button class="details-btn" onclick="toggleDetails(this)">Detalji</button>
+            <div class="details">
+                <p>Otkrij najnoviji domaći dres Bayerna za sezonu 2025/26! Tradicionalna crveno-bijela kombinacija dobila je moderan dizajn s finim detaljima koji odražavaju bogatu povijest kluba. Napredni materijali osiguravaju optimalnu prozračnost i udobnost, dok tehnologija odvodi vlagu i pruža slobodu kretanja na terenu. Idealan izbor za navijače koji žele spoj stila i performansi.</p>
+            </div>
+        </div>
+        <div class="product">
+        <img src="https://assets.adidas.com/images/w_1880,f_auto,q_auto/4637af8460a340dda6fedf8f8bd1c799_9366/JP0459_01_laydown.jpg" alt="Dres Al Nassra">
+        <h2>Dres Al Nassr</h2>
+        <p class="price">80 €</p>
+        <button class="details-btn" onclick="toggleDetails(this)">Detalji</button>
+        <div class="details">
+            <p>Predstavljamo ekskluzivni dres Al-Nassra za sezonu 2025/26, u prepoznatljivoj plavo-žutoj kombinaciji. S elegantnim modernim dizajnom i naprednim materijalima, ovaj dres pruža maksimalnu udobnost i regulaciju temperature. Savršen za sve navijače koji žele pokazati podršku svom klubu, kako na stadionu tako i izvan njega. Limited edition – istakni svoj stil i pripadnost Al-Nassru!</p>
+        </div>
+    </div>
 
 </main>
 
